Added GitHub token (not sure what this is)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,4 +41,5 @@ jobs:
         with:
           target_branch: staging
           build_dir: public
-
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
